HBASE-29602 Add -Djava.security.manager=allow to JDK18+ surefire JVM flags (#7315)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
Signed-off-by: Balazs Meszaros <meszibalu@apache.org>
(cherry picked from commit e1c17e5e8c7d11df12b9abf3cf6e224c5c4da8f8)